# Project39-ar

./: .gitignore  Cargo.toml  README.md  config.toml  modelinfo.txt
assets/: props.toml
assets/YYB式初音ミクCrude Hair/: model.toml  中文readme.txt
assets/camera/: camera.blend  camera.blend1
assets/cursed/: hand.blend
assets/hand/: hand.blend
assets/katamari/: katamari.blend  katamari.blend1  katamari_baked.mtl  katamari_ball.mtl
assets/shapes/Blocks/: Block_6x2x1.mtl
assets/shapes/Plates/: Plate16_1x2.mtl
assets/shapes/Sources/BasicShapes/: Cone_LQ.mtl  Cylinder_HQ.mtl  Icosphere.mtl
assets/shapes/Textures/Project/: Textures.ai
assets/test/: model.mtl  test.pmx
assets/test2/: model.toml  test2.blend  test2.blend1  test2.pmx  test22.pmx
assets/test3/: test3.mtl  test3.obj.bak  test3.pmx
assets/test4/: model.toml  test4.blend  test4.blend1  test4.mtl  test4.pmx  test42.pmx
assets/test5/: test5.csv  test5.mtl  test5.pmx
derive/: Cargo.toml
derive/src/: lib.rs
dumps/1627325755/: config.json  frame.txt  intrinsics.txt
dumps/1627325837/: frame.txt
dumps/1627325869/: frame.txt
dumps/1627325946/: frame.txt
dumps/1627325976/: frame.txt
dumps/1632153443/: frame.txt
dumps/1632153500/: config.json  frame.txt  intrinsics.txt
dumps/1632153582/: frame.txt
dumps/1632153608/: frame.txt
models/YYB式初音ミクCrude Hair/: English readme.txt  YYB式初音ミクCrude Hair.pmx  readme.txt
models/hand/: hand.blend1
models/toolblaster/: ToolBlaster.blend  ToolBlaster.mtl
src/: application.rs  config.rs  debug.rs  main.rs  math.rs  openvr_vulkan.rs  steamvr_config.rs  translations.txt  utils.rs  window.rs
src/application/: bench.rs  entity.rs  mod.rs  physics.rs  vr.rs  window.rs
src/application/entity/: bone.rs  builder.rs  entity_ref.rs  mod.rs
src/application/eyes/: background.rs  mod.rs  openvr_cb.rs
src/application/eyes/camera/: dummy.rs  escapi.rs  mod.rs  opencv.rs  openvr.rs
src/application/eyes/pipeline/: frag.glsl  mod.rs  vert.glsl
src/application/gui/: main_tab.rs  mod.rs  physics_tab.rs  selection.rs
src/application/input/: device.rs  mod.rs  state.rs
src/application/vr/: camera_service.rs  mod.rs
src/application/vr/tracked_camera/: error.rs  mod.rs  utils.rs
src/application/window/: gui.rs  mod.rs
src/component/: comedy.rs  example.rs  glow.rs  hand.rs  katamari.rs  miku.rs  mirror.rs  mod.rs  parent.rs  pc_controlled.rs  pov.rs  seat.rs  suit_zoom.rs  test.rs  thruster.rs  toolgun.rs
src/component/miku/: enums.rs  gui.rs  mod.rs  proc_anim.rs
src/component/model/: mod.rs
src/component/model/billboard/: mod.rs
src/component/model/billboard/pipeline/: frag.glsl  mod.rs  vert.glsl
src/component/model/gimp/: asset.rs  mod.rs
src/component/model/gimp/pipeline/: frag.glsl  mod.rs  vert.glsl  vertex.rs
src/component/model/mmd/: asset.rs  bone.rs  config.rs  import.rs  joint.rs  mod.rs  overrides.rs  rigid_body.rs  shared.rs  sub_mesh.rs  test.rs
src/component/model/mmd/pipeline/: base_frag.glsl  base_vert.glsl  macros.rs  mod.rs  outline_frag.glsl  outline_vert.glsl  vertex.rs
src/component/model/mmd/shared/: bone.rs  builder.rs  collider.rs  joint.rs  mod.rs  rigid_body.rs  sub_mesh.rs
src/component/model/simple/: asset.rs  import.rs  mod.rs
src/component/physics/: collider.rs  joint.rs  mod.rs  rope.rs
src/component/srgb_test/: mod.rs
src/component/srgb_test/pipeline/: frag.glsl  mod.rs  vert.glsl  vertex.rs
src/component/toolgun/: any_model.rs  axis.rs  ball_socket.rs  mod.rs  prop_manager.rs  remover.rs  rope.rs  spawner.rs  thruster.rs  tool.rs  weld.rs
src/component/toolgun/pipeline/: frag.glsl  mod.rs  vertex.rs
src/component/tools/: mod.rs  remover.rs  spawner.rs
src/component/vr/: ik.rs  mod.rs  root.rs  spawner.rs  tracked.rs
src/renderer/: background.rs  camera.rs  commons_vbo.rs  context.rs  debug_renderer.rs  entity.rs  eye.rs  eyes.rs  mod.rs  model.rs  model_utils.rs  openvr_cb.rs  render_target.rs  text_cache.rs  vertex.rs  window.rs
src/renderer/assets_manager/: mod.rs  obj.rs  pmx.rs  texture.rs  toml.rs
src/renderer/camera/: dummy.rs  escapi.rs  mod.rs  opencv.rs  openvr.rs
src/renderer/camera/openvr/: mod.rs  tracked_camera.rs
src/renderer/camera/openvr/tracked_camera/: error.rs  mod.rs  service.rs  utils.rs
src/renderer/debug_renderer/: mod.rs  text_cache.rs
src/renderer/model/: fence_check.rs  import.rs  mod.rs  sub_mesh.rs
src/renderer/model/mmd/: bone.rs  import.rs  mod.rs  pipeline.rs  shared.rs  sub_mesh.rs  test.rs  vertex.rs
src/renderer/model/simple/: import.rs  mod.rs  vertex.rs
src/renderer/pipelines/: mod.rs
src/renderer/pipelines/background/: frag.glsl  mod.rs  vert.glsl
src/renderer/pipelines/debug/: frag.glsl  mod.rs  shape_frag.glsl  shape_vert.glsl  tex_frag.glsl  tex_vert.glsl  vert.glsl  vertex.rs
src/renderer/pipelines/default/: frag.glsl  glow_frag.glsl  glow_vert.glsl  mod.rs  vert.glsl  vertex.rs
src/renderer/pipelines/mirror/: mod.rs  vert.glsl  vertex.rs
src/renderer/pipelines/mmd/: base_frag.glsl  base_vert.glsl  commons.glsl  culling.rs  frag.glsl  macros.rs  mod.rs  morph_comp.glsl  outline_frag.glsl  outline_vert.glsl  vert.glsl  vertex.rs
src/renderer/pipelines/toolgun_text/: mod.rs  vert.glsl  vertex.rs
src/utils/: assets.rs  fence_check.rs  fps_counter.rs  from_args.rs  id_gen.rs  images.rs  index_buffer.rs  input.rs  mod.rs  multiview.rs  mut_mark.rs  nalgebra_pod.rs  pattern.rs  rapier.rs  ref_cell_iter.rs  vec_future.rs  vulkan.rs
src/utils/gui/: application.rs  math.rs  mod.rs  physics.rs
tools/: cleanup_err_variants.js  cleanup_imports.js
