[package]
name = "project39-ar"
version = "0.1.0"
authors = ["Fun Maker <funmaker95@gmail.com>"]
edition = "2018"

[features]
opencv-camera = ["opencv"]

[dependencies]
#vulkano = { git = "https://github.com/funmaker/vulkano", rev = "13b7188b711d7bec67bfb0267979f76b82030d5a" }
#vulkano-shaders = { git = "https://github.com/funmaker/vulkano", rev = "13b7188b711d7bec67bfb0267979f76b82030d5a" }
#vulkano-win = { git = "https://github.com/funmaker/vulkano", rev = "13b7188b711d7bec67bfb0267979f76b82030d5a" }
#vulkano = { path = "../vulkano/vulkano" }
#vulkano-shaders = { path = "../vulkano/vulkano-shaders" }
#vulkano-win = { path = "../vulkano/vulkano-win" }
vulkano = "0.29.0"
vulkano-shaders = "0.29.0"
vulkano-win = "0.29.0"
image = "0.24.2"
openvr = "0.6.0"
openvr_sys = "2.0.3"
err-derive = "0.3.1"
getopts = "0.2.21"
arc-swap = "1.5.0"
obj-rs = "0.7.0"
opencv = { version = "0.65.0", optional = true }
num-traits = "0.2.15"
lazy_static = "1.4.0"
winit = "0.26.1"
mmd = { git = "https://github.com/funmaker/mmd-rs", rev = "cebbbe812593909a0989eb1d86ee609b15c2b51f" }
#pipeline = { path = "../pipeline-rs" }
native-dialog = "0.6.3"
unifont = "0.1.0"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
simba = "0.7.1"
imghdr = "0.7.0"
toml = { version = "0.5.9", features = ['preserve_order'] }
serde = "1.0.138"
serde_derive = "1.0.138"
project39-ar-derive = { path = "derive" }
#rapier3d = { git = "https://github.com/funmaker/rapier", rev = "8c5f88738dd9be9ca3458d610c34d39a85956d23" }
#rapier3d = { path = "../rapier/crates/rapier3d" }
rapier3d = "0.13.0"
linked-hash-map = { version = "0.5.6", features = ['serde_impl'] }
rand = "0.8.5"
bytemuck = "1.10.0"
enumflags2 = "0.7.5"

[target.'cfg(windows)'.dependencies]
escapi = "4.0.0"

[profile.dev.package.rapier3d]
opt-level = 3

[profile.dev.package.image]
opt-level = 3
