[package]
name = "project39-ar"
version = "0.1.0"
authors = ["Fun Maker <funmaker95@gmail.com>"]
edition = "2018"

[features]
opencv-camera = ["opencv"]

[dependencies]
vulkano = "0.33.0"
vulkano-shaders = "0.33.0"
vulkano-win = "0.33.0"
ash = "0.37.2"
image = "0.24.6"
openvr = "0.6.0"
openvr_sys = "2.0.3"
err-derive = "0.3.1"
getopts = "0.2.21"
arc-swap = "1.6.0"
obj-rs = "0.7.1"
opencv = { version = "0.80.0", optional = true }
num-traits = "0.2.15"
lazy_static = "1.4.0"
winit = "0.28.3"
mmd = { git = "https://github.com/funmaker/mmd-rs", rev = "cebbbe812593909a0989eb1d86ee609b15c2b51f" }
native-dialog = "0.6.3"
unifont = "0.1.0"
nalgebra = { version = "0.32.2", features = ["serde-serialize", "bytemuck"] }
simba = "0.8.1"
imghdr = "0.7.0"
toml = { version = "0.7.3", features = ['preserve_order'] }
serde = "1.0.160"
serde_derive = "1.0.160"
project39-ar-derive = { path = "derive" }
rapier3d = "0.17.2"
linked-hash-map = { version = "0.5.6", features = ['serde_impl'] }
rand = "0.8.5"
bytemuck = { version = "1.13.1", features = ['min_const_generics'] }
enumflags2 = "0.7.7"
egui = "0.21.0"
egui_winit_vulkano = "0.24.0"
parking_lot = "0.12.1"
colored = "2.0.0"

[target.'cfg(windows)'.dependencies]
escapi = "4.0.0"

[patch.crates-io]
vulkano = { git = "https://github.com/funmaker/vulkano", rev = "3c8f6f44f812c6bdc96de961d2c898ffd2979253" }
vulkano-shaders = { git = "https://github.com/funmaker/vulkano", rev = "3c8f6f44f812c6bdc96de961d2c898ffd2979253" }
vulkano-win = { git = "https://github.com/funmaker/vulkano", rev = "3c8f6f44f812c6bdc96de961d2c898ffd2979253" }
#rapier3d = { git = "https://github.com/funmaker/rapier", rev = "8c5f88738dd9be9ca3458d610c34d39a85956d23" }

#vulkano = { path = "../vulkano/vulkano" }
#vulkano-shaders = { path = "../vulkano/vulkano-shaders" }
#vulkano-win = { path = "../vulkano/vulkano-win" }
#rapier3d = { path = "../rapier/crates/rapier3d" }

[profile.dev.package.rapier3d]
opt-level = 3

[profile.dev.package.image]
opt-level = 3
